[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/Player.png" type="Texture" id=1]
[ext_resource path="res://scenes/player/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 6 )

[node name="Player" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="UpCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -16 )
collide_with_areas = true

[node name="DownCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 16 )
collide_with_areas = true

[node name="LeftCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -16, 0 )
collide_with_areas = true

[node name="RightCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 16, 0 )
collide_with_areas = true

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
